--- a/IPAddressTracker/AngularV/src/app/Components/banner/banner.component.html
+++ b/IPAddressTracker/AngularV/src/app/Components/banner/banner.component.html
@@ -1,1 +1,10 @@
-<p>banner works!</p>
+<div class="Banner">
+  <section>
+    <form [formGroup]="profileForm" (ngSubmit)="getIP()">
+      <label for="Ip">IP Address Tracker </label>
+      <input id="Ip" type="number" formControlName="IpObtain">
+      <button  >-></button>
+    </form>
+
+  </section>
+</div>
