--- a/IPAddressTracker/AngularV/src/app/Components/banner/banner.component.html
+++ b/IPAddressTracker/AngularV/src/app/Components/banner/banner.component.html
@@ -2,10 +2,15 @@
   <section>
     <form [formGroup]="profileForm" (ngSubmit)="getIP()">
       <label for="Ip">IP Address Tracker </label>
-      <input id="Ip" type="string" formControlName="IpObtain" value="8.69.103.127">
-      <button>-></button>
-    </form>
+      <div>
+        <input id="Ip" type="string" formControlName="IpObtain">
+        <button>
+          <img src="../../../assets/img/icon-arrow.svg" alt="">
+        </button>
+      </div>
 
+    </form>
+    <app-main></app-main>
 
   </section>
 </div>
