--- a/IPAddressTracker/AngularV/src/app/Components/main/main.component.html
+++ b/IPAddressTracker/AngularV/src/app/Components/main/main.component.html
@@ -1,1 +1,16 @@
-<p>main works!</p>
+<div class="Main">
+  <section>
+    <div>
+      <p>ip address</p>
+    </div>
+    <div>
+      <p>location</p>
+    </div>
+    <div>
+      <p>timezone</p>
+    </div>
+    <div>
+      <p>isp</p>
+    </div>
+  </section>
+</div>
