--- a/IPAddressTracker/AngularV/src/styles.scss
+++ b/IPAddressTracker/AngularV/src/styles.scss
@@ -1,6 +1,11 @@
-#map {
-  height: 400px;
-  width: 100%;
-  max-width: 600px;
+*{
+  margin: 0;
+  padding: 0;
+}
 
+
+#map {
+  height: 100vh;
  }
+
+
