--- a/IPAddressTracker/AngularV/src/app/Components/main/main.component.scss
+++ b/IPAddressTracker/AngularV/src/app/Components/main/main.component.scss
@@ -3,15 +3,16 @@
 }
 
 .Main section{
+  text-transform: uppercase;
   top: 8rem;
-  left: calc(50% - 364px);
+  left: calc(50% - 194px);
   position: absolute;
   display: flex;
-  width: 50%;
   height: 100px;
   background-color: white;
   gap: 2rem;
   border: 1px transparent solid;
   border-radius: 4px;
   z-index: 1;
+  padding: 14px;
 }
